# Astral-Ide

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: extensions.rs  main.rs
src/adapters/: lsp_adapter.ts
src/components/AppBar/: AppBar.tsx
src/components/ContentArea/: ContentArea.tsx
src/components/SideBar/: SideBar.tsx
src/sections/AppBar/: AppBar.css
src/sections/ContentArea/: CodeEditor.tsx  ContentArea.tsx
src/sections/SideBar/: SideBar.tsx
src/widgets/: CheckboxWidget.ts
